<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:elevation="30dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/are_you_ready_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_ready"
            android:textColor="@color/darkBlue"
            android:textSize="25sp"
            android:fontFamily="@font/blackroboto"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/excitement_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_you_excited_to_start_workout_feel_the_energy_inside_you_focus_on_your_today_s_goal_visualise_your_dream_body_and_lets_start"
            android:textColor="@color/darkvoilet"
            android:textStyle="normal"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:fontFamily="@font/regularroboto"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp" />

        <Button
            android:id="@+id/ready_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/pink"
            android:fontFamily="@font/blackroboto"
            android:text="@string/yes_i_am_ready"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:backgroundTint="@color/pink"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/blackroboto"
            android:text="@string/no_hold_on"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
