<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="10dp"
    android:background="@color/white"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">


        <!-- Title Text -->
        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:background="@drawable/ic_baseline_close_24" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10px"
            android:text="@string/are_you_sure"
            android:fontFamily="@font/blackroboto"
            android:textSize="25sp"
            android:textColor="@color/darkBlue"
            android:gravity="center" />

        <!-- Close Button -->

        <!-- Content Text -->
        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/are_you_sure_you_want_to_quit_to_the_main_menu_the_progress_of_this_exercise_session_will_not_be_saved_if_you_continue"
            android:textColor="@color/darkvoilet"
            android:textSize="13sp"
            android:textAlignment="center" />

        <!-- Ok Button -->
        <Button
            android:id="@+id/ok_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/pink"
            android:fontFamily="@font/blackroboto"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
