<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <!-- Title Text -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/delete_medicine_reminder"
            android:textColor="@color/darkBlue"
            android:textSize="25sp"
            android:fontFamily="@font/blackroboto"
            android:gravity="center" />

        <!-- Content Text -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delete_p"
            android:textColor="@color/darkvoilet"
            android:textSize="19sp"
            android:gravity="center" />

        <!-- Delete Button -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDelete"
            android:layout_width="100dp"
            android:background="@drawable/rounded_edittext"
            android:layout_height="40dp"
            android:backgroundTint="@color/pink"
            android:layout_gravity="center"
            android:text="@string/delete"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/blackroboto" />

        <!-- Cancel Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/pink"
            android:gravity="center"
            android:background="@drawable/rounded_edittext"
            android:text="CANCEL"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/blackroboto" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
