<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    tools:ignore="TextSizeCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <ImageView
            android:id="@+id/imageViewMedicine"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/_07_00"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/darkblue"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageViewMedicine"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.034" />

        <TextView
            android:id="@+id/textViewMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parol"
            android:textStyle="bold"
            android:textColor="@color/darkblue"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewTime"
            app:layout_constraintTop_toBottomOf="@+id/textViewTime"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewDosage"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/_2_dosage"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageViewMedicine"
            app:layout_constraintTop_toBottomOf="@+id/textViewMedicine"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/light_grey"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/delete"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageButtonEdit"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/texttospeech"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/light_grey"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/play"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewDosage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.588" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/light_grey"

            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/edit"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.622"
            app:layout_constraintStart_toEndOf="@+id/textViewTime"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonStatus"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Pending"
            android:layout_marginTop="10sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDosage"
            app:layout_constraintVertical_bias="0.511" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>